simple/test/features/errors/semantic/e1071_invalid_attribute_position.spl
# E1071: Invalid Attribute Position

Feature: E1071 - Attribute Not Allowed in This Position
  As a Simple compiler
  I want to detect attributes in invalid positions
  So that attributes are only used where allowed

  Background:
    Given I have the Simple compiler

  Scenario: Attribute on local variable
    When I compile:
      '''
      fn test():
        #[inline]  # Error: cannot use inline on local variable
        val x = 42
      '''
    Then I should see error E1071 at line 2
    And the error message should be "attribute `{attr}` not allowed in this position"
    And the label should indicate "attribute not allowed here"
    And the help should suggest "move or remove the attribute"

  Scenario: Valid attribute position
    When I compile:
      '''
      #[inline]
      fn fast_function():
        42
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        #[inline]
        val x = 42
      '''
    Then I should see error E1071
    And the error message should contain "잘못된 속성 위치"
